syntax = "proto3";

package rpc_package;

// define a service
service HelloWorldService {
  // define the interface and data type
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  //双向通信
  rpc BidirectionalStream (stream StreamRequest) returns (stream SteamResponse){}
}

// define the data type of request
message HelloRequest {
  string name = 1;
}

// define the data type of response
message HelloReply {
  string message = 1;
}

message StreamRequest {
  int32 optCode = 1;
  string input = 2;
}

message SteamResponse {
  int32 optCode = 1;
  int32 respCode = 2;
  string output = 3;
}